--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -25,5 +25,11 @@
       </div>
       <button class="btn btn-success">Login</button>
     </form>
+    <div class="mt-3 alreadyLogin">
+      <p>Don't have an account?</p>
+      <form action="/login" method="GET">
+        <button class="btn btn-success">Signup</button>
+      </form>
+    </div>
   </div>
 </div>
