--- a/views/listings/listings.ejs
+++ b/views/listings/listings.ejs
@@ -105,7 +105,7 @@
           alt="listing image"
           style="height: 20rem"
         />
-        <div class="card-img-overlay">Jagadeesh Sutar</div>
+        <div class="card-img-overlay"></div>
         <div class="card-body">
           <p class="card-text">
             <b><%= listing.title %></b> <br />
