--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,56 +1,55 @@
 <% layout("layouts/boilerplate") %>
 
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-8 offset-3">
-          <h3><b>
-              <%= listing.title %>
-            </b> <br /></h3>
+  <div class="container">
+    <div class="row">
+      <div class="col-8 offset-3">
+        <h3><b>
+            <%= listing.title %>
+          </b> <br /></h3>
+      </div>
+      <div class="card listing-card col-6 offset-3 show-card" style="width: 18rem">
+        <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing image" />
+        <div class="card-body">
+          <p class="card-text mt-3">
+          <p class="card-text">Owned by <i>
+              <%= listing.owner.username %>
+            </i></p>
+          <p class="card-text">
+            <%= listing.description %>
+          </p>
+          <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN") %>
+          </p>
+          <p class="card-text">
+            <%= listing.location %>
+          </p>
+          <p class="card-text">
+            <%= listing.country %>
+          </p>
+          </p>
         </div>
-        <div class="card listing-card col-6 offset-3 show-card" style="width: 18rem">
-          <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing image" />
-          <div class="card-body">
-            <p class="card-text mt-3">
-            <p class="card-text">Owned by <i>
-                <%= listing.owner.username %>
-              </i></p>
-            <p class="card-text">
-              <%= listing.description %>
-            </p>
-            <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN") %>
-            </p>
-            <p class="card-text">
-              <%= listing.location %>
-            </p>
-            <p class="card-text">
-              <%= listing.country %>
-            </p>
-            </p>
-          </div>
+      </div>
+      <br />
+      <% if(currUser && listing.owner._id.equals(currUser._id)){ %>
+        <div class="btns">
+          <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+          <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+            <button class="btn btn-dark offset-2">Delete</button>
+          </form>
         </div>
         <br />
-        <% if(currUser && listing.owner._id.equals(currUser._id)){ %>
-          <div class="btns">
-            <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-            <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-              <button class="btn btn-dark offset-2">Delete</button>
-            </form>
-          </div>
-          <br />
-          <% } %>
+        <% } %>
 
 
-            <div class="col-8 offset-3">
+          <div class="col-8 offset-3">
+            <% if(currUser){ %>
               <hr />
-              <% if(currUser){ %>
-                <h4>Leave a review</h4>
-                <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
-                  <!-- <div class="mt-3 mb-3">
+              <h4>Leave a review</h4>
+              <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
+                <!-- <div class="mt-3 mb-3">
                     <label for="rating" class="form-label">Rating</label>
                     <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-control" />
                   </div> -->
-                  <div class="mt-3 mb-3">
+                <div class="mt-3 mb-3">
                   <label for="rating" class="form-label">Rating</label>
                   <fieldset class="starability-slot">
                     <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
@@ -66,21 +65,22 @@
                     <input type="radio" id="first-rate5" name="review[rating]" value="5" />
                     <label for="first-rate5" title="Amazing">5 stars</label>
                   </fieldset>
+                </div>
+                <div class="mt-3 mb-3">
+                  <label for="comment" class="form-label">Comments</label>
+                  <textarea name="review[comment]" id="comment" cols="30" rows="6" class="form-control"
+                    required></textarea>
+                  <div class="invalid-feedback">
+                    Please add some comments for review
                   </div>
-                  <div class="mt-3 mb-3">
-                    <label for="comment" class="form-label">Comments</label>
-                    <textarea name="review[comment]" id="comment" cols="30" rows="6" class="form-control"
-                      required></textarea>
-                    <div class="invalid-feedback">
-                      Please add some comments for review
-                    </div>
-                  </div>
-                  <button class="btn btn-outline-dark mb-3">Submit</button>
-                </form>
-                <% } %>
-                  <hr />
-                  <p><b> All Reviews </b></p>
+                </div>
+                <button class="btn btn-outline-dark mb-3">Submit</button>
+              </form>
+              <% } %>
+                <hr />
+                <% if(listing.reviews.length>0){ %>
                   <div class="row">
+                    <p><b> All Reviews </b></p>
                     <% for(review of listing.reviews){ %>
                       <div class="card col-5 mb-3 ms-3 p-3">
                         <div class="card-body">
@@ -99,7 +99,24 @@
                       </div>
                       <% } %>
                   </div>
-            </div>
-      </div>
+                  <% } %>
+          </div>
+          <div class="col-8 offset-3 mb-3">
+            <h3>Where you'll be</h3>
+            <div id="map"></div>
+          </div>
     </div>
-  </body>
+  </div>
+
+<script>
+  let mapToken = "<%= process.env.MAP_TOKEN %>";
+  console.log(mapToken)
+  mapboxgl.accessToken = mapToken;
+  const map = new mapboxgl.Map({
+    container: 'map', // container ID
+    // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
+    style: 'mapbox://styles/mapbox/streets-v12', // style URL
+    center: [-74.5, 40], // starting position [lng, lat]
+    zoom: 9 // starting zoom
+  });
+</script>
