--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -27,7 +27,7 @@
     </form>
     <div class="mt-3 alreadyLogin">
       <p>Don't have an account?</p>
-      <form action="/login" method="GET">
+      <form action="/signup" method="GET">
         <button class="btn btn-success">Signup</button>
       </form>
     </div>
