--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,6 +1,6 @@
 <% layout("layouts/boilerplate") %>
-<div class="row">
-  <div class="col-6 offset-3">
+<div class="row respLogin">
+  <div class="col-6 offset-3 respLogin-outer">
     <h1>Login</h1>
     <form action="/login" method="POST" class="needs-validation" novalidate>
       <div class="mb-3">
@@ -23,9 +23,9 @@
           required
         />
       </div>
-      <button class="btn btn-success">Login</button>
+      <button class="btn btn-success jaggu" id="jaggu">Login</button>
     </form>
-    <div class="mt-3 alreadyLogin">
+    <div class="mt-3">
       <p>Don't have an account?</p>
       <form action="/signup" method="GET">
         <button class="btn btn-success">Signup</button>
