--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,7 +2,7 @@
 <body>
   <div class="container mt-3">
     <div class="row">
-      <div class="col-8 offset-2">
+      <div class="col-8 offset-2 editReview">
         <h1>Edit your Listing</h1>
         <form
           method="POST"
