--- a/views/listings/listings.ejs
+++ b/views/listings/listings.ejs
@@ -98,7 +98,7 @@
   <div class="row row-cols-lg-3 row-cols-mg-2 row-cols-lg-1 mt-3">
     <% for (let listing of allListings){ %>
     <a href="/listings/<%= listing._id %>" class="listing-link">
-      <div class="card col listing-card" style="width: 25rem">
+      <div class="card col listing-card">
         <img
           src="<%= listing.image.url %>"
           class="card-img-top"
