--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,12 +2,12 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-8 offset-3">
+      <div class="col-8 offset-3 listingHeading">
         <h3><b>
             <%= listing.title %>
           </b> <br /></h3>
       </div>
-      <div class="card listing-card col-6 offset-3 show-card" style="width: 18rem">
+      <div class="card listing-card col-6 offset-3 show-card" >
         <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing image" />
         <div class="card-body">
           <p class="card-text mt-3">
@@ -40,7 +40,7 @@
         <% } %>
 
 
-          <div class="col-8 offset-3">
+          <div class="col-8 offset-3 review">
             <% if(currUser){ %>
               <hr />
               <h4>Leave a review</h4>
