--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -23,9 +23,9 @@
           required
         />
       </div>
-      <button class="btn btn-success jaggu" id="jaggu">Login</button>
+      <button class="btn btn-success">Login</button>
     </form>
-    <div class="mt-3">
+    <div class="mt-3 alreadyLogin">
       <p>Don't have an account?</p>
       <form action="/signup" method="GET">
         <button class="btn btn-success">Signup</button>
