--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,6 +1,6 @@
 <% layout("layouts/boilerplate") %>
 <div class="row">
-  <div class="col-6 offset-3">
+  <div class="col-6 offset-3 signupShow">
     <h1>Signup On Wanderlust</h1>
     <form action="/signup" method="POST" class="needs-validation" novalidate>
       <div class="mb-3">
