--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -82,7 +82,7 @@
                   <div class="row">
                     <p><b> All Reviews </b></p>
                     <% for(review of listing.reviews){ %>
-                      <div class="card col-5 mb-3 ms-3 p-3">
+                      <div class="card col-5 mb-3 ms-3 p-3 ratingCard">
                         <div class="card-body">
                           <div class="card-title">@<%= review.author.username %>
                           </div>
